[tool.khulnasoft]
name = "khulnasoft"
version = "0.1.0"
description = "A Python SDK for the Khulnasoft API"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "khulnasoft"
version = "0.1.0"
description = "A Python SDK for the Khulnasoft API"
authors = [
    {name = "Khulnasoft", email = "developers@khulnasoft.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.7.0",
    "anyio>=4.0.0",
    "distro>=1.8.0"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/khulnasoft/khulnasoft-python"
Repository = "https://github.com/khulnasoft/khulnasoft-python"

[tool.pdm]
package-dir = "khulnasoft"
managed = true
dev-dependencies = [
  "pyright>=1.1.359",
  "mypy",
  "respx",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "time-machine",
  "nox",
  "dirty-equals>=0.6.0",
  "importlib-metadata>=6.7.0",
  "rich>=13.7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
xfail_strict = true
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.7"
exclude = ["_dev", ".venv", ".nox"]
reportImplicitOverride = true
reportImportCycles = false
reportPrivateUsage = false
reportOverlappingOverload = false

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py37"
select = [
  "I",    # isort
  "B",    # bugbear rules
  "F401", # remove unused imports
  "E722", # bare except statements
  "ARG",  # unused arguments
  "T201", # print statements
  "T203",
  "TID251", # misuse of typing.TYPE_CHECKING
]
ignore = ["B006"]  # mutable defaults
unfixable = ["T201", "T203"]
ignore-init-module-imports = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"functools.lru_cache".msg = "This function does not retain type information for the wrapped function's arguments; The `lru_cache` function from `_utils` should be used instead"

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["khulnasoft", "tests"]

[tool.ruff.per-file-ignores]
"bin/**.py" = ["T201", "T203"]
"scripts/**.py" = ["T201", "T203"]
"tests/**.py" = ["T201", "T203"]
"examples/**.py" = ["T201", "T203"]
